--- a/final_inception.ipynb
+++ b/final_inception.ipynb
@@ -70,7 +70,7 @@
     "id": "qMOBckzygp5D"
    },
    "source": [
-    "# Preprocessing\n",
+    "# 0. Preprocessing\n",
     "all code in this section adapted from https://www.kaggle.com/virajbagal/stanford-dogs-alexnet-paper-implementation-pytorch"
    ]
   },
@@ -965,7 +965,7 @@
     "id": "UonfiLWSgp5O"
    },
    "source": [
-    "# Train model on GPU"
+    "# 1. Build and train model"
    ]
   },
   {
@@ -1566,7 +1566,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Test on Mixed-Breed Data"
+    "# 2. Test on Mixed-Breed Data"
    ]
   },
   {
@@ -2454,7 +2454,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Test Lenny!"
+    "# 3. Test Lenny!"
    ]
   },
   {
