--- a/final_inception.ipynb
+++ b/final_inception.ipynb
@@ -1443,6 +1443,7 @@
     }
    ],
    "source": [
+    "# adapted from https://learnopencv.com/image-classification-using-transfer-learning-in-pytorch/\n",
     "epochs = 10\n",
     "best_avg_val_loss = np.inf\n",
     "history = []\n",
